--- a/app/templates/tab2.html
+++ b/app/templates/tab2.html
@@ -51,7 +51,31 @@
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody id="category-rows" hx-get="/tab/2/categories?cache_bust={{ cache_bust }}" hx-trigger="load, refreshTab">
+        <tbody id="category-rows">
+            {% for category in categories %}
+            {% set cat_id = category.name.lower() | regex_replace('[^a-z0-9-]', '_') %}
+            {% set encoded_category = category.name | urlencode | replace("'", "\\'") | replace('"', '\\"') %}
+            <tr>
+                <td>{{ category.name }}</td>
+                <td>{{ category.customer_name }}</td>
+                <td class="hidden">{{ category.total_items }}</td>
+                <td>{{ category.on_contracts }}</td>
+                <td class="hidden">{{ category.in_service }}</td>
+                <td class="hidden">{{ category.available }}</td>
+                <td>{{ category.last_scanned_date }}</td>
+                <td>
+                    <button class="btn btn-sm btn-secondary expand-btn" onclick="expandCategory('{{ encoded_category }}', 'subcat-{{ cat_id }}')">Expand</button>
+                    <button class="btn btn-sm btn-secondary collapse-btn" style="display:none;" onclick="collapseSection('subcat-{{ cat_id }}')">Collapse</button>
+                    <button class="btn btn-sm btn-info print-btn" data-print-level="Contract" data-print-id="category-table">Print</button>
+                    <div id="loading-{{ cat_id }}" style="display:none;" class="loading">Loading...</div>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="8">
+                    <div id="subcat-{{ cat_id }}" class="expandable collapsed"></div>
+                </td>
+            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </div>
@@ -59,7 +83,7 @@
 <!-- JavaScript for refreshing the table -->
 <script>
 function refreshTab() {
-    htmx.trigger('#category-rows', 'refreshTab');
+    window.location.reload(); // Simple refresh for now
 }
 </script>
 {% endblock %}
