--- a/app/templates/tab2.html
+++ b/app/templates/tab2.html
@@ -40,7 +40,7 @@
     <!-- Table for displaying contracts -->
     <table class="table table-bordered" id="category-table">
         <thead>
-            <tr>
+            <tr id="category-table-header">
                 <th>Contract Number</th>
                 <th>Customer Name</th>
                 <th>Total Items on Contract</th>
@@ -51,7 +51,7 @@
         <tbody id="category-rows">
             {% for category in categories %}
             {% set encoded_category = category.name | urlencode | replace("'", "\\'") | replace('"', '\\"') %}
-            <tr>
+            <tr id="category-row-{{ category.cat_id }}">
                 <td>{{ category.name }}</td>
                 <td>{{ category.customer_name }}</td>
                 <td>{{ category.total_items }}</td>
@@ -59,7 +59,7 @@
                 <td>
                     <button class="btn btn-sm btn-secondary expand-btn" onclick="expandCategory('{{ encoded_category }}', 'subcat-{{ category.cat_id }}')">Expand</button>
                     <button class="btn btn-sm btn-secondary collapse-btn" style="display:none;" onclick="collapseSection('subcat-{{ category.cat_id }}')">Collapse</button>
-                    <button class="btn btn-sm btn-info print-btn" data-print-level="Contract" data-print-id="category-table-{{ category.cat_id }}">Print</button>
+                    <button class="btn btn-sm btn-info print-btn" data-print-level="Contract" data-print-id="category-row-{{ category.cat_id }}">Print</button>
                     <div id="loading-{{ category.cat_id }}" style="display:none;" class="loading">Loading...</div>
                 </td>
             </tr>
